--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.4.1",
     "astro": "5.10.1",
+    "lucide": "^0.525.0",
+    "lucide-react": "^0.525.0",
+    "lucide-static": "^0.525.0",
     "typescript": "5.8.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "wrangler": "4.21.x"
   },
   "scripts": {
